--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-native-firebase/firestore": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "express": "^4.18.3",
+    "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-camera": "^4.2.1",
+    "react-native-image-picker": "^7.1.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-vision-camera": "^3.6.14"
